--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -35,12 +35,23 @@ cronAdminMail = abhinav.bhardwaj@a3logics.in
 resources.session.cookie_httponly = true
 
 [development : production]
-phpSettings.display_startup_errors = 1
-phpSettings.display_errors = 1
-resources.frontController.params.displayExceptions = 1
+phpSettings.display_startup_errors = 0
+phpSettings.display_errors = 0
+resources.frontController.params.displayExceptions = 0
+
+resources.db.params.host = "localhost"
+resources.db.params.username = "greenips_crm"
+resources.db.params.password = ";dRyv$luzEhS"
+resources.db.params.dbname = greenips_crm
+cronAdminMail = abhinav.bhardwaj@engineer.com
+
+[development : production]
+phpSettings.display_startup_errors = 0
+phpSettings.display_errors = 0
+resources.frontController.params.displayExceptions = 0
 
 resources.db.params.host = "localhost"
 resources.db.params.username = "root"
 resources.db.params.password = ""
 resources.db.params.dbname = CRM
-cronAdminMail = abhinav.bhardwaj@a3logics.in
+cronAdminMail = abhinav.bhardwaj@engineer.com
