--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -34,7 +34,7 @@ datetime.format.datetime = "m-d-Y H:i:s"
 cronAdminMail = abhinav.bhardwaj@a3logics.in
 resources.session.cookie_httponly = true
 
-[development : production]
+[testing : production]
 phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
 resources.frontController.params.displayExceptions = 0
