--- a/application/configs/constants.ini
+++ b/application/configs/constants.ini
@@ -57,6 +57,12 @@ constant.ADMIN_ADD_CLIENT           =       'Client | Add'
 constant.ADMIN_CLIENT_LIST          =       'Client | List'
 constant.ADMIN_PURCHASE_ORDER       =       'Receipt | Purchase Order'
 
+constant.ADMIN_COMPANY_NAME         =       'ASHITA CHEMICALS'
+constant.ADMIN_SUPPLIER_OF          =       'Drycleaners, Washing & Spotting Chemicals, Garment Finishing and Laundry Chemicals
+<center>JUKI MACHINE WHITE OIL'
+constant.ADMIN_COMPANY_ADDRESS      =       '40, Kalyan Nagar-D, Sikarpura Road, Sanganer, Jaipur (Raj.)'
+constant.ADMIN_COMPANY_PHONE        =       '09351649350, 09829740077'
+constant.ADMIN_COMPANY_TIN          =       '08972158366'
 
 ;constants for admin ends
 
