pussing chnages for 1 april

--- a/application/configs/constants.ini
+++ b/application/configs/constants.ini
@@ -64,6 +64,13 @@ constant.ADMIN_COMPANY_ADDRESS      =       '40, Kalyan Nagar-D, Sikarpura Road,
 constant.ADMIN_COMPANY_PHONE        =       '09351649350, 09829740077'
 constant.ADMIN_COMPANY_TIN          =       '08972158366'
 
+
+constant.SHIPPING                   =       '0'
+;Vat in % will calculated on the page
+constant.VAT                        =       '4.8'
+constant.DISCOUNT                   =       '4.5'
+
+
 ;constants for admin ends
 
 ;constants for social links
